--- a/template/.gitignore
+++ b/template/.gitignore
@@ -160,5 +160,9 @@ cython_debug/
 #  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+.idea/
 
+# Kamihi files
+# We ignore the files with secrets we prefer not to share with the world, such as the Telegram token
+kamihi.yml
+kamihi.yaml
